# ddsp-demucs

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  ddsp_residual_large.yaml  ddsp_residual_small.yaml
experiments/: exp001_baseline_ddsp.md  exp002_residual_model.md
notebooks/: 00_setup_env.ipynb  01_musdb_demucs_inference.ipynb  02_features_and_gate.ipynb  03_build_tfrecords.ipynb  04.5_clean_model.ipynb  04_train_ddsp.ipynb  spectral_mask.ipynb  teacher_forcing_model.ipynb
scripts/: evaluate_experiment.sh  train_ddsp_residual.sh
src/ddsp_demucs/: __init__.py  data.py  demucs_wrappers.py  dsp.py  evaluate.py  model.py  train.py  utils.py
tests/: __init__.py  test_utils.py
